fixed another alignment issue for background 7

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -971,6 +971,7 @@
   .background-7-cards {
     display: flex;
     color: white;
+    justify-content: center;
     width: 100%;
 
     .subtitler {
